tests/ui/comptime/const_comptime.stderr
error: a function cannot just be `comptime`
  --> $DIR/const_comptime.rs:4:1
   |
LL | #[rustc_comptime]
   | ----------------- `comptime` because of this
LL | fn foo() {}
   | ^ help: add `const`: `const`
   |
note: `const` is less restrictive than `comptime`, but already adds many restrictions `comptime` needs
  --> $DIR/const_comptime.rs:4:1
   |
LL | fn foo() {}
   | ^

error: aborting due to 1 previous error

